# color-constancy-photo-enhancement

./: .gitignore  CHANGELOG.md  CITATION.cff  README.md  color_constancy_enhancer.py  pyproject.toml  requirements.txt  setup.py  zenodo.json
.github/workflows/: ci.yml  publish.yml
color_constancy/: __init__.py  benchmark.py  cli.py  io.py  metrics.py  visualization.py
color_constancy/algorithms/: __init__.py  base.py  constants.py  gray_world.py  pipeline.py  retinex.py  sme.py  spatial.py  von_kries.py  white_patch.py
tests/: conftest.py  test_algorithms.py  test_benchmark.py  test_cli.py  test_io.py  test_metrics.py  test_sme.py
